--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddKeyword.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddKeyword.cshtml
@@ -14,56 +14,90 @@
         position: absolute;
     }
 </style>
+<div class="body-minHeight">
 
-<div class="row">
-    <div class="col-md-2">.</div>
-    <div class="col-md-8">
 
-        <h2>Add Keyword</h2>
-        <div class="row">
-            <div class="col-md-2">Catgeory</div>
-            <div class="col-md-8">
-                @Model.CategoryName
+
+    <div class="row">
+        <div class="col-md-2">.</div>
+        <div class="col-md-8">
+
+            <h2>Add Keyword</h2>
+            <div class="row">
+                <div class="col-md-2">Catgeory</div>
+                <div class="col-md-8">
+                    @Model.CategoryName
+                </div>
             </div>
-        </div>
-        @using (Html.BeginForm("AddKeyword1", "Category", FormMethod.Post, new { area = "Admin", @class = "form-horizontal", @role = "form" }))
+            @using (Html.BeginForm("AddKeyword", "Category", FormMethod.Post, new { area = "Admin", @class = "form-horizontal", @role = "form" }))
         {
-            <hr />
+                <hr />
 
-            @Html.ValidationSummary(true)
-            @Html.HiddenFor(model => model.CategoryId)
-            <div class="form-group">
-                @Html.LabelFor(model => model.Text, new { @class = "col-sm-offset-1 col-md-2" })
-                <div class="col-sm-offset-1 col-md-10">
-                    @Html.EditorFor(model => model.Text, new { htmlAttributes = new { placeholder = "Input Keyword name", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Text)
+                @Html.ValidationSummary(true)
+                @Html.HiddenFor(model => model.CategoryId)
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Text, new { @class = "col-sm-offset-1 col-md-2" })
+                    <div class="col-sm-offset-1 col-md-10">
+                        @Html.EditorFor(model => model.Text, new { htmlAttributes = new { placeholder = "Input Keyword name", @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Text)
+                    </div>
                 </div>
-            </div>
 
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10 create-button">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10 create-button">
+                        <input type="submit" value="Create" class="btn btn-default" />
+                    </div>
                 </div>
-            </div>
         }
 
-        @* =============== *@
-        @{
-            <br />
+            @* =============== *@
+            @{
+                <br />
 
             if (ViewBag.Message != null)
             {
-                <h1 class="alert alert-danger">@ViewBag.Message</h1>
+                    <h1 class="alert alert-danger">@ViewBag.Message</h1>
                 ViewData.Clear();
             }
 
-        }
+            }
 
+
+
+        </div>
 
 
     </div>
 
+    <div class="row">
+        <div class="col-md-2">.</div>
+        <div class="col-md-8">
+            <div class="panel-body">
+                <table class="table table-bordered table-striped" id="myTable">
+                    <thead>
+                        <tr>
+                            <th>
+                                Keyword
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Keywords)
+                {
+                            <tr>
+                                <td>
 
+                                    @Html.DisplayFor(modelItem => item.Text)
+                                </td>
+
+                            </tr>
+                }
+                    </tbody>
+
+                </table>
+
+            </div>
+        </div>
+    </div>
 </div>
-
