--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddTopic.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddTopic.cshtml
@@ -5,18 +5,19 @@
     .btn-default {
         margin-left: -50px;
     }
+
     .form-horizontal {
         margin-top: 22px;
     }
+
     .footer {
-        position: absolute; 
-     }
+        position: absolute;
+    }
 </style>
 
 <div class="row">
     <div class="col-md-2">.</div>
     <div class="col-md-8">
-
         <h2>Add Topic</h2>
         <div class="row">
             <div class="col-md-2">Catgeory</div>
@@ -27,7 +28,6 @@
         @using (Html.BeginForm("AddTopic", "Category", FormMethod.Post, new { area = "Admin", @class = "form-horizontal", @role = "form" }))
         {
             <hr />
-
             @Html.ValidationSummary(true)
             @Html.HiddenFor(model => model.CategoryId)
             <div class="form-group">
@@ -37,16 +37,12 @@
                     @Html.ValidationMessageFor(model => model.TopicName)
                 </div>
             </div>
-
-
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10 create-button">
                     <input type="submit" value="Create" class="btn btn-default" />
                 </div>
             </div>
         }
-
-        @* =============== *@
         @{
             <br />
 
@@ -57,10 +53,35 @@
             }
 
         }
-
-
-
     </div>
+</div>
+<div class="row">
+    <div class="col-md-2">.</div>
+    <div class="col-md-8">
+        <div class="panel-body">
+            <table class="table table-bordered table-striped" id="myTable">
+                <thead>
+                    <tr>
+                        <th >
+                            TopicName
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.Topics)
+                    {
+                        <tr>
+                            <td>
+                                
+                                @Html.DisplayFor(modelItem => item.TopicName)
+                            </td>
+                            
+                        </tr>
+                    }
+                </tbody>
 
+            </table>
 
+        </div>
+    </div>
 </div>
