--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditKeyword.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditKeyword.cshtml
@@ -22,7 +22,7 @@
 <div class="row">
     <div class="col-md-8 alignFixed">
 
-        @using (Html.BeginForm("AddKeyword", "Category", FormMethod.Post, new { area = "Admin", @class = "form-horizontal", @role = "form" }))
+        @using (Html.BeginForm("EditKeyword", "Category", FormMethod.Post, new { area = "Admin", @class = "form-horizontal", @role = "form" }))
         {
             <hr />
 
@@ -53,7 +53,7 @@
                             </div>*@
             <div class="form-group">
                 <div class="col-sm-offset-1 ">
-                    <input type="submit" value="Show" class="btn btn-default marginFixed" />
+                    <input type="submit" value="ShowKeyword" class="btn btn-default marginFixed" />
                 </div>
 
 
