--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditTopic.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditTopic.cshtml
@@ -54,7 +54,7 @@
                             </div>*@
             <div class="form-group">
                 <div class="col-sm-offset-1 ">
-                    <input type="submit" value="Show" class="btn btn-default marginFixed" />
+                    <input type="submit" value="ShowTopic" class="btn btn-default marginFixed" />
                 </div>
 
 
