--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditKeyword.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditKeyword.cshtml
@@ -18,6 +18,13 @@
     .btn-success {
         margin-left: 15px;
     }
+
+    .table-responsive {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 349px;
+    }
+
 </style>
 <div class="row">
     <div class="col-md-8 alignFixed">
@@ -25,7 +32,6 @@
         @using (Html.BeginForm("EditKeyword", "Category", FormMethod.Post, new { area = "Admin", @class = "form-horizontal", @role = "form" }))
         {
             <hr />
-
             @Html.ValidationSummary(true)
             @*@Html.HiddenFor(model => model.Id)*@
             <div class="form-group">
@@ -40,17 +46,6 @@
                     @Html.ValidationMessageFor(x => x.CategoryId)
                 </div>
             </div>
-            @*<div class="form-group">
-                                <div class="col-sm-offset-1 col-md-2">Category Name</div>
-                                <div class="col-sm-offset-1 col-md-10">
-                                    @Html.DropDownListFor(
-                    x => x.CategoryId,
-                    new SelectList(Model.Topics, "Id", "TopicName"),
-                    "-- Please select a topic --"
-                )
-                                    @Html.ValidationMessageFor(x => x.CategoryId)
-                                </div>
-                            </div>*@
             <div class="form-group">
                 <div class="col-sm-offset-1 ">
                     <input type="submit" value="ShowKeyword" class="btn btn-default marginFixed" />
