akash:Akash category updated

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditTopic.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/EditTopic.cshtml
@@ -19,6 +19,11 @@
     .btn-success {
         margin-left: 15px;
     }
+        .table-responsive {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 349px;
+    }
 </style>
 <div class="row">
     <div class="col-md-8 alignFixed">
