--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -12,6 +12,11 @@
     border: none;
 }
 
+.nav-shadow {
+    background-color: white;
+    box-shadow: 0px 3px 14px #888888;
+}
+
 .backgroundset {
     min-height: 66px !important;
     background-image: url(../images/background.png);
@@ -80,6 +85,7 @@
         }
     }
 }
+
 .navbar-toggle {
     margin-top: -29px;
     background: none;
@@ -88,8 +94,8 @@
 }
 
 .navbar-brand {
-    position:relative;
-    color:black;
+    position: relative;
+    color: black;
     height: 40px;
     padding: 0px 0px;
     margin-left: 5px;
@@ -111,7 +117,7 @@
 
     > li {
         > a {
-            color: black!important;
+            color: black !important;
             padding-top: 10px;
             padding-bottom: 10px;
 
@@ -169,9 +175,11 @@
         background-size: 30px 23px;
     }
 }
-.navbar-inverse .navbar-toggle:focus{
-    background:none;
+
+.navbar-inverse .navbar-toggle:focus {
+    background: none;
 }
+
 .navbar-collapse {
     margin-top: 5px;
 }
