--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="carousel">
-    <ol class="carousel-indicators" >
+    <!--<ol class="carousel-indicators" >
         <li data-target="#carousel-example-generic" *ngFor="let image of images;let i = index"  class="indicator" [ngClass]="{'active': i==movePosition }" (click)="slideImage(i)"></li>
-    </ol>
+    </ol>-->
     <ul class="slides">
         <li class="slide-item" *ngFor="let image of images" [style.left]="moveValue">
             <!--<h2>{{image.title}}</h2>-->
