--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search-dropdown.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search-dropdown.component.html
@@ -19,6 +19,6 @@
         </option>
     </select>
     <textarea name="body" class="question-control" placeholder="Agrega detalle de tu pregunta - Opcional" [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>
-    <input type="checkbox" #cv [checked]=false (change)="onChange(cv.checked)" /> <label>Preguntar Anonimo</label>
+    <input type="checkbox" #cv [checked]=false (change)="onChange(cv.checked)" /> <label>Preguntar anónimo</label>
 </div>
 
