akahs:Catehgory Bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddCategory.cshtml
@@ -107,7 +107,7 @@
 
             if (ViewBag.Message != null)
             {
-                <h1 class="alert alert-danger">@ViewBag.Message</h1>
+                <h1 class="alert alert-success">@ViewBag.Message</h1>
                 ViewData.Clear();
             }
 
