--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddTopic.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddTopic.cshtml
@@ -53,7 +53,7 @@
 
             if (ViewBag.Message != null)
             {
-                <h1 class="alert alert-danger">@ViewBag.Message</h1>
+                <h1 class="alert alert-success">@ViewBag.Message</h1>
                 ViewData.Clear();
             }
 
@@ -69,7 +69,7 @@
                     <thead>
                         <tr>
                             <th>
-                                TopicName
+                                Topic Name
                             </th>
                         </tr>
                     </thead>
