akash:Bakcroud cover

--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
 
         body {
             background-image: url('../images/backgroudimage.jpg');
-            background-size: 1541px 841px;
+            background-size: cover;
             background-repeat: no-repeat;
         }
 
