akash:Spnish convertion in login page

--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Forgot Password Confirmation";
+    //ViewData["Title"] = "Forgot Password Confirmation";
+
+    ViewData["Title"] = "Reestablecer contraseña";
 }
 
 @*<h2>@ViewData["Title"].</h2>*@
@@ -11,7 +13,8 @@
     <div class="form-group">
         <div class="col-md-10">
             <p>
-                Please check your email to reset your password.
+                @*Please check your email to reset your password.*@
+                Revisa tu correo electrónico para reestablecer tu contraseña
             </p>
         </div>
 
