--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Reset password confirmation";
+   // ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Reestablecer contraseña";
 }
 
 
