--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPassword.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPassword.cshtml
@@ -18,7 +18,7 @@
     <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
         <h4>Ingresa tu correo electrónico.</h4>
         <hr />
-        <div asp-validation-summary="All" class="text-danger"></div>
+        @*<div asp-validation-summary="All" class="text-danger"></div>*@
         <div class="form-group">
             <label  class="col-md-3 control-label">Correo electrónico @*Emali*@</label>
             <div class="col-md-8">
