--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -46,7 +46,7 @@
                 <h2 class="login-header">
                     @*Sign Up*@Regístrate 
                 </h2>
-                <div asp-validation-summary="All" class="text-danger"></div>
+                @*<div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
                         <input asp-for="Email" placeholder="Correo electrónico" class="form-control" id="email" />
